--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,68 +1,124 @@
-@article{b1,
-  title={{On certain integrals of Lipschitz-Hankel type involving products of Bessel functions}},
-  author={Eason, George and Noble, Benjamin and Sneddon, Ian Naismith},
-  journal={Philosophical Transactions of the Royal Society of London. Series A, Mathematical and Physical Sciences},
-  volume={247},
-  number={935},
-  pages={529--551},
-  year={1955},
-  publisher={The Royal Society London}
+@INPROCEEDINGS{Heartbleed,
+  author={Kyatam, Shashank and Alhayajneh, Abdullah and Hayajneh, Thaier},
+  booktitle={2017 IEEE Long Island Systems, Applications and Technology Conference (LISAT)},
+  title={Heartbleed attacks implementation and vulnerability},
+  year={2017},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={Servers;Heart beat;Payloads;Encryption;Computer hacking;Public key;Heartbleed;Heartbeat;SSL;TLS;Reverse Heartbleed},
+  doi={10.1109/LISAT.2017.8001980}}
+
+@article{Shors_Algorithm,
+  title = {Quantum computation and Shor's factoring algorithm},
+  author = {Ekert, Artur and Jozsa, Richard},
+  journal = {Rev. Mod. Phys.},
+  volume = {68},
+  issue = {3},
+  pages = {733--753},
+  numpages = {0},
+  year = {1996},
+  month = {6},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.68.733},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.68.733}
 }
 
-@article{b2,
-  title={{A Treatise on Electricity and Magnetism}},
-  author={Maxwell, James Clerk},
-  year={1892},
-  number={3},
-  volume={2},
-  pages={68--73},
-  publisher={Oxford Clarendon, London, England}
+@misc{ent,
+	author = {Lorenz Lo Sauer },
+	title = {{G}it{H}ub - lsauer/entropy: ent is a small, fast command line utility, plotting various entropy related metrics of files or pipe/stdin streams --- github.com},
+	howpublished = {\url{https://github.com/lsauer/entropy}},
+	year = {2011},
+	note = {[Accessed 12-11-2024]},
 }
 
-@article{b3,
-  title={{Fine Particles, Thin Films and Exchange Anisotropy}},
-  author={Jacobs, I. S. and Bean, C. P.},
-  journal={Magnetism},
-  pages={271--350},
-  year={1963},
-  publisher={Academic}
+@misc{Shadowsocks,
+	author = {Shadowsocks Developers},
+	title = {{G}it{H}ub - shadowsocks/shadowsocks-org: www.shadowsocks.org --- github.com},
+	howpublished = {\url{https://github.com/shadowsocks/shadowsocks-org}},
+	year = {2012},
+	note = {[Accessed 20-11-2024]},
 }
 
-@unpublished{b4,
-  title={{Title of Paper if knwon}},
-  author={Elissa, K.},
-  year={2000},
-  note={unpublished}
+@misc{Trojan_gfw,
+	author = {Trojan-GFW Developers},
+	title = {{G}it{H}ub - trojan-gfw/trojan: {A}n unidentifiable mechanism that helps you bypass {G}{F}{W}. --- github.com},
+	howpublished = {\url{https://github.com/trojan-gfw/trojan}},
+	year = {2017},
+	note = {[Accessed 20-11-2024]},
 }
 
-@article{b6,
-  title={Electron spectroscopy studies on magneto-optical media and plastic substrate interface},
-  author={Yorozu, T and Hirano, M and Oka, K and Tagawa, Y},
-  journal={IEEE translation journal on magnetics in Japan},
-  volume={2},
-  number={8},
-  pages={740--741},
-  year={1987},
-  publisher={IEEE}
+@misc{Obfs4,
+	author = {Yawning Angel},
+	title = {{G}it{H}ub - {Y}awning/obfs4: {T}he obfourscator ({C}ourtesy mirror) --- github.com},
+	howpublished = {\url{https://github.com/Yawning/obfs4}},
+	year = {2014},
+	note = {[Accessed 20-11-2024]},
 }
 
-@book{b7,
-  title={The technical writer's handbook: writing with style and clarity},
-  author={Young, Matt},
-  year={2002},
-  publisher={University Science Books}
+@misc{Naiveproxy,
+	author = {Naiveproxy Developers},
+	title = {{G}it{H}ub - klzgrad/naiveproxy: {M}ake a fortune quietly --- github.com},
+	howpublished = {\url{https://github.com/klzgrad/naiveproxy}},
+	year = {2018},
+	note = {[Accessed 20-11-2024]},
 }
 
-@article{b8,
-  title={{IEEEtran LaTeX Class for Authors of the Institute of Electrical and Electronics Engineers (IEEE) Transactions Journals and Conferences}},
-  author={Shell, M.},
-  year={2005},
+@misc{TLS_Fingerprinting,
+      title={Deciphering Malware's use of TLS (without Decryption)},
+      author={Blake Anderson and Subharthi Paul and David McGrew},
+      year={2016},
+      eprint={1607.01639},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/1607.01639},
 }
 
-@misc{b9,
-  author = {Kirsch, Daniel and Kühl, Philipp},
-  title = {{Detexify}},
-  howpublished = {\url{http://detexify.kirelabs.org/classify.html}},
-  year = {2008},
-  note = {[Online; accessed 19-July-2008]}
+@inproceedings{Active_Probing,
+author = {Alice and Bob and Carol and Beznazwy, Jan and Houmansadr, Amir},
+title = {How China Detects and Blocks Shadowsocks},
+year = {2020},
+isbn = {9781450381383},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3419394.3423644},
+doi = {10.1145/3419394.3423644},
+booktitle = {Proceedings of the ACM Internet Measurement Conference},
+pages = {117–120},
+numpages = {14},
+keywords = {censorship circumvention, active probing, Shadowsocks, Great Firewall of China},
+location = {Virtual Event, USA},
+series = {IMC '20}
+}
+@misc{MITM_Image,
+author = {Alwazzeh, Muneer and Karaman, Sameer and Shamma, Mohammad},
+year = {2020},
+month = {07},
+pages = {454},
+title = {Man in The Middle Attacks Against SSL/TLS: Mitigation and Defeat},
+journal = {Journal of Cyber Security and Mobility},
+doi = {10.13052/jcsm2245-1439.933},
+note = {Figure 3}
+}
+
+@misc{Proxy-Server,
+  title = {Proxy-Server},
+  author = {Seobility},
+  howpublished = {\url{https://www.seobility.net/en/wiki/Proxy_Server}},
+  year = {2023},
+  note = {[Accessed 14-11-2024]}
+}
+@article{Trojan-Probe,
+title = {TrojanProbe: Fingerprinting Trojan tunnel implementations by actively probing crafted HTTP requests},
+journal = {Computers & Security},
+volume = {148},
+pages = {104147},
+year = {2025},
+issn = {0167-4048},
+doi = {https://doi.org/10.1016/j.cose.2024.104147},
+url = {https://www.sciencedirect.com/science/article/pii/S0167404824004528},
+author = {Liuying Lv and Peng Zhou},
+keywords = {Hidden tunnel, Active fingerprinting, Censorship, Code audit, Anti-identifiability},
+abstract = {Trojan Probe},
+note = {Figure 2}
 }
